<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@android:color/white"
    android:layout_margin="4dp"
    android:layout_gravity="center"
    style="@style/backgroundRv">

    <!-- Título -->
    <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inspired_favorites_test"
            android:layout_marginBottom="4dp"
            android:textSize="18sp"
            android:textStyle="bold" />

    <!-- Contenedor para la imagen y detalles -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Imagen -->
        <ImageView
            android:id="@+id/imageProduct"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginBottom="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_short" />

        <!-- Detalles -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <!-- Descripción -->
            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/short_test"
                android:textSize="14sp" />

            <!-- Precio -->
            <TextView
                android:id="@+id/textPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_test"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Indicación de envío -->
            <TextView
                android:id="@+id/textShipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/free_shipping"
                android:textColor="@color/send_green"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
