<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    tools:context=".ui.HomeActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_home_yellow"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@color/background_yellow"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_home_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <ImageView
                android:id="@+id/iv_home_menu"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:src="@drawable/icon_menu" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_home_search_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="12dp"
                android:layout_weight="5"
                android:background="@drawable/btn_home_search_view"
                app:iconifiedByDefault="false" />

            <ImageView
                android:id="@+id/iv_home_trolley"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:src="@drawable/icon_trolley" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_home_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp">

            <ImageView
                android:id="@+id/iv_home_map"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/icon_map" />

            <TextView
                android:id="@+id/tv_home_"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/address_test"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_home_go"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_go" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_home_free"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:background="@color/white"
            android:padding="8dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/icon_send" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/free_shipping"
                android:textColor="@color/send_green" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/free_shipping_millon_product" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_home_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_home_yellow">

        <ImageButton
            android:id="@+id/ibt_home_offer"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_home_rounded"
            android:elevation="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_offer"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/ibt_home_coupon"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_home_rounded"
            android:elevation="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_coupon"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/ibt_home_trolley"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_home_rounded"
            android:elevation="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_trolley_search"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/ibt_home_phone"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_home_rounded"
            android:elevation="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_phone"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/ibt_home_fashion"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_home_rounded"
            android:elevation="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_fashion"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_home_options"
        tools:listitem="@layout/item_rv_product">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_vertical_home_product"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_home_product"
        tools:listitem="@layout/item_rv_vertical_product">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>
